Añadimos las clases del Model, la clase Connector, e implementamos el MVC del proyecto RUIPI v1.0.0

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,11 +37,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/RUIPI
 excludes=
+file.reference.mysql-connector-java-8.0.21.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\MySQL\\mysql-connector-java-8.0.21\\mysql-connector-java-8.0.21.jar
 file.reference.RUIPI-resource=resource
 file.reference.RUIPI-src=src
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.21.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
