Añadimos los frames correspondientes a Menú Principal, Configuración, Gestión de Paientes y Usuarios. Se añadieron las funcionalidades iniciales del Lector de Huella DigitalPersona U.are.U 4500 y se comprobó el correcto funcionamiento de la conexión con la base de datos.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,13 +37,24 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/RUIPI
 excludes=
+file.reference.dpjavapos.jar=C:\\Program Files\\DigitalPersona\\U.are.U SDK\\Windows\\Lib\\Java\\dpjavapos.jar
+file.reference.dpuareu.jar=C:\\Program Files\\DigitalPersona\\U.are.U SDK\\Windows\\Lib\\Java\\dpuareu.jar
+file.reference.jpos113.jar=C:\\Program Files\\DigitalPersona\\U.are.U SDK\\Windows\\Lib\\Java\\jpos113.jar
 file.reference.mysql-connector-java-8.0.21.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\MySQL\\mysql-connector-java-8.0.21\\mysql-connector-java-8.0.21.jar
 file.reference.RUIPI-resource=resource
 file.reference.RUIPI-src=src
+file.reference.xercesImpl-2.6.2.jar=C:\\Program Files\\DigitalPersona\\U.are.U SDK\\Windows\\Lib\\Java\\xercesImpl-2.6.2.jar
+file.reference.xmlParserAPIs.jar=C:\\Program Files\\DigitalPersona\\U.are.U SDK\\Windows\\Lib\\Java\\xmlParserAPIs.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.21.jar}
+    ${file.reference.mysql-connector-java-8.0.21.jar}:\
+    ${file.reference.dpjavapos.jar}:\
+    ${file.reference.dpuareu.jar}:\
+    ${file.reference.jpos113.jar}:\
+    ${file.reference.xercesImpl-2.6.2.jar}:\
+    ${file.reference.xmlParserAPIs.jar}:\
+    ${libs.DigitalPersona.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -90,7 +101,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=-Djava.security.policy=applet.policy
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
