Resolvimos los problemas relacionados con el frmPatients que cusaba que se insertaran registros de la huella del paciente sin nombre y otros campos, se resolvió el problema del inicio de sesión que se generaba por una desconección de la base de datos al ingresar username y password inválidos o vacíos.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/RUIPI
 excludes=
+file.reference.dpfpenrollment.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpfpenrollment.jar
+file.reference.dpfpverification.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpfpverification.jar
 file.reference.dpjavapos.jar=C:\\Program Files\\DigitalPersona\\U.are.U SDK\\Windows\\Lib\\Java\\dpjavapos.jar
+file.reference.dpotapi.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpotapi.jar
+file.reference.dpotjni.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpotjni.jar
 file.reference.dpuareu.jar=C:\\Program Files\\DigitalPersona\\U.are.U SDK\\Windows\\Lib\\Java\\dpuareu.jar
 file.reference.jpos113.jar=C:\\Program Files\\DigitalPersona\\U.are.U SDK\\Windows\\Lib\\Java\\jpos113.jar
 file.reference.mysql-connector-java-8.0.21.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\MySQL\\mysql-connector-java-8.0.21\\mysql-connector-java-8.0.21.jar
@@ -54,7 +58,10 @@ javac.classpath=\
     ${file.reference.jpos113.jar}:\
     ${file.reference.xercesImpl-2.6.2.jar}:\
     ${file.reference.xmlParserAPIs.jar}:\
-    ${libs.DigitalPersona.classpath}
+    ${file.reference.dpfpenrollment.jar}:\
+    ${file.reference.dpfpverification.jar}:\
+    ${file.reference.dpotapi.jar}:\
+    ${file.reference.dpotjni.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
