--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=RUIPI
+application.vendor=lenov
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;src=resource;output=bin;
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=.
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1598497543508
@@ -36,28 +37,21 @@ dist.jar=${dist.dir}/RUIPI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/RUIPI
+endorsed.classpath=
 excludes=
 file.reference.dpfpenrollment.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpfpenrollment.jar
 file.reference.dpfpverification.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpfpverification.jar
-file.reference.dpjavapos.jar=C:\\Program Files\\DigitalPersona\\U.are.U SDK\\Windows\\Lib\\Java\\dpjavapos.jar
 file.reference.dpotapi.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpotapi.jar
 file.reference.dpotjni.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpotjni.jar
-file.reference.dpuareu.jar=C:\\Program Files\\DigitalPersona\\U.are.U SDK\\Windows\\Lib\\Java\\dpuareu.jar
-file.reference.jpos113.jar=C:\\Program Files\\DigitalPersona\\U.are.U SDK\\Windows\\Lib\\Java\\jpos113.jar
 file.reference.mysql-connector-java-8.0.21.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\MySQL\\mysql-connector-java-8.0.21\\mysql-connector-java-8.0.21.jar
 file.reference.RUIPI-resource=resource
 file.reference.RUIPI-src=src
 file.reference.xercesImpl-2.6.2.jar=C:\\Program Files\\DigitalPersona\\U.are.U SDK\\Windows\\Lib\\Java\\xercesImpl-2.6.2.jar
-file.reference.xmlParserAPIs.jar=C:\\Program Files\\DigitalPersona\\U.are.U SDK\\Windows\\Lib\\Java\\xmlParserAPIs.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.21.jar}:\
-    ${file.reference.dpjavapos.jar}:\
-    ${file.reference.dpuareu.jar}:\
-    ${file.reference.jpos113.jar}:\
     ${file.reference.xercesImpl-2.6.2.jar}:\
-    ${file.reference.xmlParserAPIs.jar}:\
     ${file.reference.dpfpenrollment.jar}:\
     ${file.reference.dpfpverification.jar}:\
     ${file.reference.dpotapi.jar}:\
@@ -70,8 +64,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=13
-javac.target=13
+javac.source=14
+javac.target=14
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
