--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,9 +1,9 @@
 compile.on.save=true
-do.depend=false
+do.depend=true
 do.jar=true
 do.jlink=false
 file.reference.xercesImpl-2.6.2.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\Librer\u00edas DigitalPersona.rar
-javac.debug=false
+javac.debug=true
 javadoc.preview=true
 jlink.strip=false
 user.properties.file=C:\\Users\\lenov\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
