--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -9,6 +9,7 @@ auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;src=resour
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=.
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1598497543508
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.workspace=..
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -48,24 +49,26 @@ file.reference.RUIPI-resource=resource
 file.reference.RUIPI-src=src
 file.reference.xercesImpl-2.6.2.jar=C:\\Program Files\\DigitalPersona\\U.are.U SDK\\Windows\\Lib\\Java\\xercesImpl-2.6.2.jar
 includes=**
-jar.compress=false
+jar.archive.disabled=${jnlp.enabled}
+jar.compress=true
+jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.21.jar}:\
     ${file.reference.xercesImpl-2.6.2.jar}:\
     ${file.reference.dpfpenrollment.jar}:\
     ${file.reference.dpfpverification.jar}:\
     ${file.reference.dpotapi.jar}:\
-    ${file.reference.dpotjni.jar}
+    ${file.reference.dpotjni.jar}:\
+    ${file.reference.mysql-connector-java-8.0.21.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:deprecation 
-javac.deprecation=false
+javac.deprecation=true
 javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=14
-javac.target=14
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -91,9 +94,26 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=RUIPI
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=true
+mkdist.disabled=false
 platform.active=default_platform
 resource.dir=${file.reference.RUIPI-resource}
 run.classpath=\
