--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -115,6 +115,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.license=cddl-netbeans-sun
 resource.dir=${file.reference.RUIPI-resource}
 run.classpath=\
     ${javac.classpath}:\
