Agregamos el JDateChooser para ingresar la fecha correcta, también se modificó el background de este y del comboPyDT, se modificó el JtextField por un JComboBox para Tipo Documento,

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -44,6 +44,7 @@ file.reference.dpfpenrollment.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto R
 file.reference.dpfpverification.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpfpverification.jar
 file.reference.dpotapi.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpotapi.jar
 file.reference.dpotjni.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpotjni.jar
+file.reference.jcalendar-1.4.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.21.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\MySQL\\mysql-connector-java-8.0.21\\mysql-connector-java-8.0.21.jar
 file.reference.RUIPI-resource=resource
 file.reference.RUIPI-src=src
@@ -58,7 +59,8 @@ javac.classpath=\
     ${file.reference.dpfpverification.jar}:\
     ${file.reference.dpotapi.jar}:\
     ${file.reference.dpotjni.jar}:\
-    ${file.reference.mysql-connector-java-8.0.21.jar}
+    ${file.reference.mysql-connector-java-8.0.21.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:deprecation 
 javac.deprecation=true
