--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,11 +41,17 @@ dist.jlink.output=${dist.jlink.dir}/RUIPI
 endorsed.classpath=
 excludes=
 file.reference.dpfpenrollment.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpfpenrollment.jar
+file.reference.dpfpenrollment.jar-1=C:\\Users\\Usuario\\Desktop\\TECNOLOGIA SISTEMAS DE IFORMACION\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpfpenrollment.jar
 file.reference.dpfpverification.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpfpverification.jar
+file.reference.dpfpverification.jar-1=C:\\Users\\Usuario\\Desktop\\TECNOLOGIA SISTEMAS DE IFORMACION\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpfpverification.jar
 file.reference.dpotapi.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpotapi.jar
+file.reference.dpotapi.jar-1=C:\\Users\\Usuario\\Desktop\\TECNOLOGIA SISTEMAS DE IFORMACION\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpotapi.jar
 file.reference.dpotjni.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpotjni.jar
+file.reference.dpotjni.jar-1=C:\\Users\\Usuario\\Desktop\\TECNOLOGIA SISTEMAS DE IFORMACION\\ADSI SENA\\Archivos Proyecto RUIPI\\DigitalPerson\\dpotjni.jar
 file.reference.jcalendar-1.4.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\jcalendar-1.4.jar\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\Usuario\\Desktop\\TECNOLOGIA SISTEMAS DE IFORMACION\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.21.jar=D:\\Documentos\\ADSI SENA\\Archivos Proyecto RUIPI\\MySQL\\mysql-connector-java-8.0.21\\mysql-connector-java-8.0.21.jar
+file.reference.mysql-connector-java-8.0.21.jar-1=C:\\Users\\Usuario\\Desktop\\TECNOLOGIA SISTEMAS DE IFORMACION\\ADSI SENA\\Archivos Proyecto RUIPI\\MySQL\\mysql-connector-java-8.0.21\\mysql-connector-java-8.0.21.jar
 file.reference.RUIPI-resource=resource
 file.reference.RUIPI-src=src
 file.reference.xercesImpl-2.6.2.jar=C:\\Program Files\\DigitalPersona\\U.are.U SDK\\Windows\\Lib\\Java\\xercesImpl-2.6.2.jar
@@ -60,7 +66,13 @@ javac.classpath=\
     ${file.reference.dpotapi.jar}:\
     ${file.reference.dpotjni.jar}:\
     ${file.reference.mysql-connector-java-8.0.21.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.dpfpenrollment.jar-1}:\
+    ${file.reference.dpfpverification.jar-1}:\
+    ${file.reference.dpotapi.jar-1}:\
+    ${file.reference.dpotjni.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.21.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:deprecation 
 javac.deprecation=true
